// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty 1`] = `
Array [
  <div
    className="css-bjn8wh"
  >
    <div
      className="css-907xkp"
    >
      <table
        className="css-1f5rm2b"
        role="table"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              First Name
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Last Name
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Age
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Visits
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Status
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Profile Progress
            </th>
          </tr>
        </thead>
        <tbody
          className="css-1fpax12"
          role="rowgroup"
        >
          <tr>
            <td
              colSpan={6}
            >
              <div
                className="css-qt1wxq"
              >
                <svg
                  className="css-16alpug"
                  viewBox="0 0 120 96"
                >
                  <use
                    xlinkHref="#icon-empty-data"
                  />
                </svg>
                <span
                  className="css-1mw4f8u"
                >
                  The list is empty
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  <div
    className="css-bjn8wh"
  >
    <div
      className="css-907xkp"
    >
      <table
        className="css-1f5rm2b"
        role="table"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              First Name
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Last Name
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Age
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Visits
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Status
            </th>
            <th
              className="css-1bpu65y"
              colSpan={1}
              role="columnheader"
            >
              Profile Progress
            </th>
          </tr>
        </thead>
        <tbody
          className="css-1fpax12"
          role="rowgroup"
        >
          <tr>
            <td
              colSpan={6}
            >
              <div
                className="css-qt1wxq"
              >
                <svg
                  className="css-16alpug"
                  viewBox="0 0 120 96"
                >
                  <use
                    xlinkHref="#icon-empty-data"
                  />
                </svg>
                <span
                  className="css-1mw4f8u"
                >
                  The list is empty
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;

exports[`Table renders simple 1`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-4e5si3"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            hat
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            jelly
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            7
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            56
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            <button
              className="css-1lc222t"
              type="button"
            >
              Refresh
            </button>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            67
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table renders with code row 1`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-4e5si3"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            hat
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            jelly
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            7
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            56
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            relationship
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            67
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table renders with controlled pagination and selected rows 1`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <label
              className="css-1uoamx5"
              title="Toggle All Rows Selected"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-4e5si3"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            hat
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            jelly
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            7
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            56
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            relationship
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            67
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="css-mfy4g0"
    >
      <div
        className="css-zjik7"
      >
        <button
          className="css-j1ylrk"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="css-1jwstkt"
            viewBox="0 0 14 14"
          >
            <use
              xlinkHref="#chevron-up"
            />
          </svg>
        </button>
        <span
          className="css-xqrn7q"
        >
          1
        </span>
        <button
          className="css-53w1bj"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="css-1qr49le"
            viewBox="0 0 14 14"
          >
            <use
              xlinkHref="#chevron-up"
            />
          </svg>
        </button>
        <div
          className="css-17vatmo"
          onClick={[Function]}
        >
          <button
            className="css-b3lbo0"
            type="button"
          >
            10 / page 
            <svg
              className="css-10s1w"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders with controlled pagination and selected rows 2`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-d9ujtn"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr>
          <td
            className="css-nclwog"
            colSpan={6}
            style={
              Object {
                "top": 0,
              }
            }
          >
            23.11.2020
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table renders with pagination 1`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-4e5si3"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            hat
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            jelly
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            7
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            56
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            relationship
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            67
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="css-mfy4g0"
    >
      <div
        className="css-zjik7"
      >
        <div
          className="css-1obq1rs"
        >
          1
          -
          4
           of 
          4
           items
        </div>
        <div>
          <button
            className="css-18ibiql"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              className="css-1jwstkt"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            className="css-s5x2y9"
            onClick={[Function]}
            type="button"
          >
            1
          </button>
        </div>
        <div>
          <button
            className="css-18ibiql"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              className="css-1qr49le"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
        <div
          className="css-17vatmo"
          onClick={[Function]}
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            10 / page 
            <svg
              className="css-10s1w"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders with pagination and selected rows 1`] = `
<div
  className="css-bjn8wh"
>
  <div
    className="css-907xkp"
  >
    <table
      className="css-1f5rm2b"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <label
              className="css-1uoamx5"
              title="Toggle All Rows Selected"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            First Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Last Name
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Age
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Visits
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            Status
          </th>
          <th
            className="css-25vqih"
            colSpan={1}
            role="columnheader"
          >
            <button
              className="css-ozb61x"
              onClick={[Function]}
              type="button"
            >
              Profile Progress
              <svg
                className="css-4e5si3"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#icon-sort-desc"
                />
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        className="css-1fpax12"
        role="rowgroup"
      >
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            spiders
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profession
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            15
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            55
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            66
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            profit
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            quiet
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            8
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            79
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            complicated
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            9
          </td>
        </tr>
        <tr
          className="css-16dbkro"
          onClick={null}
          role="row"
        >
          <td
            className="css-wj3v7r"
            onClick={[Function]}
            role="cell"
          >
            <label
              className="css-1uoamx5"
            >
              <input
                checked={false}
                className="css-ojip76"
                disabled={false}
                type="checkbox"
              />
              <div
                className="css-bjn8wh"
              >
                <svg
                  className="css-vbxk2i"
                  viewBox="0 0 16 16"
                >
                  <use
                    xlinkHref="#checkbox"
                  />
                </svg>
              </div>
            </label>
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            hat
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            jelly
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            7
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            56
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            relationship
          </td>
          <td
            className="css-wj3v7r"
            onClick={null}
            role="cell"
          >
            67
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="css-mfy4g0"
    >
      <div
        className="css-zjik7"
      >
        <div
          className="css-1obq1rs"
        >
          1
          -
          4
           of 
          4
           items
        </div>
        <div>
          <button
            className="css-18ibiql"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              className="css-1jwstkt"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            className="css-s5x2y9"
            onClick={[Function]}
            type="button"
          >
            1
          </button>
        </div>
        <div>
          <button
            className="css-18ibiql"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              className="css-1qr49le"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
        <div
          className="css-17vatmo"
          onClick={[Function]}
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            10 / page 
            <svg
              className="css-10s1w"
              viewBox="0 0 14 14"
            >
              <use
                xlinkHref="#chevron-up"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
